src/fortune_wheel/fortune_wheel_item_set.scss
#mbs-fwitemset {
	--height: min(7dvh, 3.5dvw);

	gap: var(--gap);

	.button-tooltip {
		--tooltip-gap: var(--gap);
	}

	.screen-header {
		direction: rtl;
		display: grid;
		grid-auto-flow: column;
		grid-template-columns: min-content auto min-content;

		button {
			direction: ltr;
			height: var(--menu-button-size);
			width: var(--menu-button-size);
		}
	}

	.screen-main {
		padding-left: min(40dvh, 20dvw);

		& > fieldset {
			border: unset;
			margin: unset;
			padding: unset;

			&:not(:last-child) {
				padding-bottom: var(--gap);
			}
		}

		& > fieldset[name="main"] {
			display: grid;
			gap: var(--gap);
			grid-template:
				"name-input name-input . . ." var(--height)
				"outfit-input outfit-input outfit-button outfit-button outfit-button" var(--height)
				"strip-header lock-header lock-header lock-header lock-header" var(--height)
				"strip-input lock-grid lock-grid lock-grid lock-grid" var(--height)
				"equip-header lock-grid lock-grid lock-grid lock-grid" var(--height)
				"equip-input lock-grid lock-grid lock-grid lock-grid" var(--height)
				"weight-header lock-grid lock-grid lock-grid lock-grid" var(--height)
				"weight-input lock-grid lock-grid lock-grid lock-grid" var(--height) / auto calc(3 * var(--menu-button-size) + var(--half-gap) + var(--height) + 2 * var(--gap)) calc(var(--menu-button-size) + var(--half-gap) + var(--height)) var(--menu-button-size) var(--menu-button-size);

			& > label,
			& > span {
				place-self: end start;
			}
		}
	}
}

#mbs-fwitemset-outfit-name {
	grid-area: name-input;
}

#mbs-fwitemset-outfit-input {
	grid-area: outfit-input;
}

#mbs-fwitemset-outfit-button {
	grid-area: outfit-button;
	grid-template-columns: auto;
	grid-template-rows: var(--height) auto;
}

#mbs-fwitemset-strip-header {
	grid-area: strip-header;
}

#mbs-fwitemset-strip-dropdown {
	grid-area: strip-input;
	width: min(50dvh, 25dvw);
}

#mbs-fwitemset-equip-header {
	grid-area: equip-header;
}

#mbs-fwitemset-equip-dropdown {
	grid-area: equip-input;
	width: min(50dvh, 25dvw);
}

#mbs-fwitemset-weight-header {
	grid-area: weight-header;
}

#mbs-fwitemset-weight-input {
	align-self: start;
	grid-area: weight-input;
	height: 100%;
	width: calc(var(--height) + 16px);
}

#mbs-fwitemset-lock-header {
	grid-area: lock-header;
}

#mbs-fwitemset-lock-grid {
	align-self: start;
	display: grid;
	gap: var(--gap);
	grid-area: lock-grid;
	grid-template-columns: 1fr 1fr;
	margin: unset;
	padding: unset;
}

.mbs-fwitemset-lock-container {
	align-items: center;
	display: grid;
	gap: var(--half-gap);
	grid-template-columns: var(--height) auto;
	list-style-type: none;
	margin: unset;
	overflow-wrap: break-word;
	padding: unset;

	input[type="checkbox"] {
		height: var(--height);
		width: var(--height);
	}

	.mbs-timer {
		height: 100%;
		text-align: center;
		width: 100%;
	}
}


#mbs-fwitemset-strip-dropdown-content, #mbs-fwitemset-equip-dropdown-content {
	width: min-content;
}

#mbs-fwitemset-events-label {
	grid-area: event-header;
	min-height: var(--height);
}

#mbs-fwitemset-events {
	grid-area: event-menu;
	list-style-type: none;
	margin: unset;
	padding: unset;

	p {
		margin-bottom: calc(var(--gap) / 2);
		margin-top: calc(var(--gap) / 2);
	}

	.mbs-fwitemset-event-menu-placeholder {
		justify-self: center;

		& > button {
			height: var(--height);
			width: var(--height);
		}
	}

	* ~ .mbs-fwitemset-event-menu-placeholder {
		display: none;
	}

	.mbs-fwitemset-event-multi-select {
		background-color: unset;
		display: grid;
		gap: var(--gap);
		grid-template:
			"all none" var(--height)
			"select select" auto / 1fr 1fr;

		button[data-select-all] {
			grid-area: all;
		}

		button:not([data-select-all]) {
			grid-area: none;
		}

		select {
			grid-area: select;
		}
	}

	.mbs-fwitemset-event-collapse {
		height: var(--height);
		width: var(--height);
	}

	.mbs-fwitemset-event-menu {
		display: block;
		list-style-type: none;
		margin: unset;
		padding: unset;
		padding-bottom: calc(var(--gap) / 2);
		padding-top: calc(var(--gap) / 2);

		select {
			min-height: var(--height);
			width: 100%;
		}

		input {
			&:invalid {
				background-color: var(--mbs-background-color);
				box-shadow: unset;
			}

			&:disabled {
				background-color: color-mix(in srgb, var(--mbs-button-color) 60%, black 40%);
			}

			&[type="text"],
			&[type="number"] {
				border-color: black;
				direction: ltr;
				height: 1.15em;
				width: 100%;
			}
		}
	}

	.mbs-fwitemset-event-kwargs {
		align-items: center;
		column-gap: var(--gap);
		direction: rtl;
		display: grid;
		grid-auto-flow: column;
		grid-template-columns: 3fr 1fr;
		text-align: left;
		width: 100%;

		&:has(select) {
			display: block;
			text-align: center;
		}

		& > * {
			direction: ltr;
			margin-block: var(--gap);
		}

		&:last-of-type > :last-child {
			margin-block: var(--gap) 0;
		}
	}

	.mbs-fwitemset-event {
		align-items: center;
		display: grid;
		gap: var(--gap);
		grid-template-columns: min-content min-content auto 45%;
		padding-right: calc(var(--gap) / 2);

		&:nth-child(odd) {
			background-color: color-mix(in srgb, var(--mbs-background-color), black 15%);
		}

		&:has(.mbs-fwitemset-event-collapse[aria-expanded="false"]) > .mbs-fwitemset-event-menu {
			& > * {
				display: none;
			}

			& > .mbs-fwitemset-event-menu-placeholder {
				display: block;
			}
		}
	}

	.mbs-fwitemset-event-checkbox:checked ~ .mbs-fwitemset-event-menu {
		select:invalid:not(:disabled),
		input:invalid:not(:disabled) {
			background-color: #fbb;
			box-shadow: 0 0 3px 2px #c22;
		}
	}
}

